[tool]
[tool.poetry]
name = "mptools"
version = "0.2.0"
description = "Mutliprocessing Tools provides wrappers to help you implement robust applications"
license = "MIT license"
keywords = ["mptools"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7"]
authors = ["Pamela D McA'Nulty <pamela@mcanulty.org>"]
readme = "README.rst"
packages = [
    { include = "mptools" },
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
watchdog = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
